--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script type="text/javascript" src="app/app.js"></script>
   <!-- Factories -->
   <script type="text/javascript" src="app/factories/ItemFactory.js"></script>
+  <script type="text/javascript" src="app/factories/FilterFactory.js"></script>
 
   <!-- Controllers -->
   <script type="text/javascript" src="app/controllers/ItemListCtrl.js"></script>
