--- a/index.html
+++ b/index.html
@@ -31,15 +31,22 @@
   </script>
   <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
   <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
+  <script type="text/javascript" src="lib/node_modules/firebase/firebase.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
+  <script type="text/javascript" src="app/values/fb-creds.js"></script>
+
   <!-- Factories -->
   <script type="text/javascript" src="app/factories/ItemFactory.js"></script>
   <script type="text/javascript" src="app/factories/FilterFactory.js"></script>
+  <script type="text/javascript" src="app/factories/AuthFactory.js"></script>
 
   <!-- Controllers -->
   <script type="text/javascript" src="app/controllers/ItemListCtrl.js"></script>
+  <script type="text/javascript" src="app/controllers/ItemEditCtrl.js"></script>
   <script type="text/javascript" src="app/controllers/ItemDetailCtrl.js"></script>
   <script type="text/javascript" src="app/controllers/ItemNewCtrl.js"></script>
   <script type="text/javascript" src="app/controllers/NavCtrl.js"></script>
+  <script type="text/javascript" src="app/controllers/LoginCtrl.js"></script>
+
 </body>
 </html>
